# LXR-Plugins

./: CMakeLists.txt  README.md
lxr_dsp/: config.h
lxr_dsp/DSPAudio/: Oscillator.c  ResonantFilter.h  dither.h  medianFilter.h  random.c
lxr_dsp/SampleRom/: SampleMemory.c  SampleMemory.h
lxr_dsp/compat/: arm_intrinsics_compat.h  stm32f4xx.h
lxr_dsp/stubs/: MidiParser.c  MidiParser.h  MidiVoiceControl.c  MidiVoiceControl.h  ParameterArray.c  ParameterArray.h  TriggerOut.c  TriggerOut.h  sequencer.c  sequencer.h
plugins/cymbal/: CMakeLists.txt  CymbalEngine.cpp  CymbalEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/drum/: CMakeLists.txt  DrumEngine.cpp  DrumEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/fx_distortion/: CMakeLists.txt  DistortionEngine.cpp  DistortionEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/fx_filter/: CMakeLists.txt  FilterEngine.cpp  FilterEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/hihat/: CMakeLists.txt  HiHatEngine.cpp  HiHatEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/shared/: BlockAccumulator.h  Components.h  LxrEngineBase.h  LxrLookAndFeel.h  Theme.h
plugins/snare/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SnareEngine.cpp  SnareEngine.h
test/: lxr_voice_test.c
